Fix source code wrap presentation (#1)
* Fix source code wrap presentation

Change property white-space from pre-wrap to pre of pre tag.

* Fix source code wrap presentation for min package

Change property white-space from pre-wrap to pre of pre tag.

--- a/source/css/prettify.css
+++ b/source/css/prettify.css
@@ -2,7 +2,7 @@
 
 /* for color-themes-for-google-code-prettify */
 pre{
-    white-space: pre-wrap;
+    white-space: pre;
     word-break: break-all;
     word-wrap: break-word;
 }
